# syringe-pump

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: aioserial_example.py  eror_example.py  imperial_example.py  imperial_march_example.py  list_com_ports.py  pyserial_example.py
syringe_pump/: __init__.py  exceptions.py  pump.py  rate.py  response_parser.py  serial_interface.py  syringe.py  time.py  volume.py
tests/: casette.json  conftest.py  io_mapping.json  pytest_config.py  test_pump.py  test_rate.py  test_response_parser.py  test_syringe.py  test_time.py  test_volume.py
