[tool.poetry]
name = "syringe-pump"
version = "0.1.0"
description = "External controller for Legato syringe pump"
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "All rights reserved"
readme = "README.md"
packages = [{include = "syringe_pump"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.7"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"
aioserial = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
