[tool.poetry]
name = "python-syringe-pump"
version = "0.1.0"
description = "A python controller for syringe pumps, e.g. Legato 100"
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "syringe_pump"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.7"
aioserial = "^1.3.1"
quantiphy = "^2.19"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.isort]
profile = "black"