[tool.poetry]
name = "python-syringe-pump"
version = "0.2.1"
description = "A python controller for syringe pumps, e.g. Legato 100"
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/Ddedalus/syringe-pump"
homepage = "https://github.com/Ddedalus/syringe-pump"
packages = [{include = "syringe_pump"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
aioserial = "^1.3.1"
quantiphy = "^2.19"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pydantic-settings = "^2.0.3"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov-report=lcov" 


[tool.isort]
profile = "black"